chore: fixing copilot review comments around locale